--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,7 @@
     --label-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --ui-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    --color-black: #333;
+    --color-black: #222;
 
     font-family: var(--ui-font);
 }
@@ -20,4 +20,18 @@ p {
 hr {
     margin: 0px;
     color: var(--color-black);
+}
+
+.fadeIn {
+    animation: fadein .2s;
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
