--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -1,14 +1,12 @@
 .card {
-    position: relative;
-    display: block;
     width: 100%;
-    height: fit-content;
+    height: 34rem;
     background: url("/images/card.png") center center;
     background-size: cover;
     border-radius: 5px;
-    overflow: hidden;
     color: #fff;
 
+    position: relative;
 }
 
 /** --------------- IMAGE BOX --------------- **/
@@ -26,7 +24,14 @@
     object-fit: contain;
 }
 
-.card .imgBx .deckImg img {
+.card .deckImgBx {
+    position: relative;
+    margin-top: 2rem;
+    height: 15rem;
+}
+
+.card .deckImgBx img {
+    object-fit: contain;
     rotate: 45deg;
     scale: 1.3;
 }
@@ -36,8 +41,7 @@
     font-weight: 600;
     letter-spacing: 1px;
     text-align: center;
-    top: 150px;
-    padding: 2rem;
+    padding: 0 1rem;
 }
 
 .card .contentBx h1 {
@@ -53,25 +57,10 @@
 }
 
 .card .contentBx p {
+    letter-spacing: .5px;
     font-size: 14px;
     font-weight: 500;
     font-style: italic;
-}
-
-.card .contentBx span {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 1rem;
-}
-
-.card .contentBx .cardBtn {
-    display: inline-block;
-    padding: 10px 20px;
-    background: #fff;
-    border-radius: 4px;
-    text-decoration: none;
-    color: #111;
 }
 
 .card .contentBx a {
@@ -101,13 +90,44 @@
     cursor: pointer;
 }
 
-.card .contentBx .cardBtn:hover,
-.card .contentBx .size span:hover {
+/** --------------- SELECTABLE STATES --------------- **/
+
+.card .contentBx .size span:hover,
+.card .bottomBar .cardBtn:hover {
     background: silver;
     transition: 0.2s;
 }
 
+/** --------------- BOTTOM BAR --------------- **/
+
+.card .bottomBar {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+}
+
+.bottomBar .innerBottomBar {
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.card .bottomBar .cardBtn {
+    display: inline-block;
+    padding: 10px 20px;
+    background: #fff;
+    border-radius: 4px;
+    text-decoration: none;
+    color: #111;
+}
+
 /** --------------- TRUCK COLORS --------------- **/
+
+.card .contentBx .color {
+    display: flex;
+    justify-content: center;
+}
 
 .card .contentBx .color span {
     width: 20px;
