--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,7 @@
     --label-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --ui-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    --color-black: #222;
+    --color-black: #333;
 
     font-family: var(--ui-font);
 }
@@ -17,11 +17,6 @@ p {
     padding: 0;
 }
 
-hr {
-    margin: 0px;
-    color: var(--color-black);
-}
-
 .fadeIn {
     animation: fadein .2s;
 }
@@ -34,4 +29,8 @@ hr {
     to {
         opacity: 1;
     }
+}
+
+.has-transition {
+    transition: all .1s ease;
 }
