--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -5,6 +5,7 @@
     background-size: cover;
     border-radius: 5px;
     color: #fff;
+    transition: all .5s ease;
 
     position: relative;
 }
@@ -155,4 +156,21 @@
     background-color: #d7d7d7;
     background-image: linear-gradient(147deg, #ddd 25%, #777 70%);
 
+}
+
+
+.card {
+    box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24);
+    transition: all 250ms;
+    animation: fadein 1s ease;
+}
+
+@keyframes fadein {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
