--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -12,15 +12,22 @@
     opacity: 0;
     box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24);
     transition: all 250ms;
-    animation: fadein .4s ease forwards;
+    animation: fadein .2s ease forwards;
 }
 
 @keyframes fadein {
     0% {
+        scale: .8;
         opacity: 0;
     }
 
+    85% {
+        scale: 1.01;
+        opacity: 1;
+    }
+
     100% {
+        scale: 1;
         opacity: 1;
     }
 }
