--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -44,6 +44,8 @@
 }
 
 .card .imgBx img {
+    width: 100%;
+    height: 100%;
     -o-object-fit: contain;
     object-fit: contain;
 }
@@ -55,10 +57,11 @@
 }
 
 .card .deckImgBx img {
-    -o-object-fit: contain;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
+    scale: 1.2;
     rotate: 45deg;
-    scale: 1.3;
 }
 
 /** --------------- CONTENT BOX --------------- **/
